[package]
name = "crypto-chat-tcp"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v4"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
